--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.10",
+    "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "~41.0.1",
+    "expo-constants": "~10.1.3",
     "expo-firebase-recaptcha": "^1.4.1",
+    "expo-notifications": "~0.11.6",
     "expo-status-bar": "~1.0.4",
     "firebase": "^8.5.0",
     "lodash": "^4.17.21",
@@ -31,16 +34,15 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-orientation-loading-overlay": "^0.1.6",
     "react-native-reanimated": "~2.1.0",
-    "react-native-restart": "0.0.22",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-screens-swiper": "^1.1.12",
     "react-native-swiper": "^1.6.0-rc.3",
+    "react-native-tab-view": "^2.16.0",
     "react-native-vector-icons": "8.1.0",
     "react-native-web": "~0.13.12",
-    "react-native-xtabbar": "^0.2.1",
     "react-native-webview": "11.2.3",
-    "expo-notifications": "~0.11.6",
-    "expo-constants": "~10.1.3"
+    "react-native-xtabbar": "^0.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
